# coding-exercises-sandbox

./: .gitignore  Readme.md
CtCI/: README.md
CtCI/cpp/: .clang-format  CMakeLists.txt  README.md
CtCI/cpp/Ch 1.Arrays And Strings/: CMakeLists.txt
CtCI/cpp/Ch 1.Arrays And Strings/1.Is Unique/: 1. Is_unique.cpp  1. Is_unique.h  1. Is_unique_test.cpp  CMakeLists.txt
CtCI/cpp/Ch 1.Arrays And Strings/2. Check Permutation/: CMakeLists.txt  permutation.h  permutation_test.cpp
CtCI/cpp/Ch 1.Arrays And Strings/4. Palindrome Permutation/: CMakeLists.txt  palindrome_permutation.h  palindrome_permutation_test.cpp
CtCI/cpp/Ch 1.Arrays And Strings/5. One Away/: CMakeLists.txt  one_away.h  one_away_test.cpp
CtCI/cpp/Ch 2. Linked Lists/: CMakeLists.txt
CtCI/cpp/Ch 2. Linked Lists/1. Remove Dups/: CMakeLists.txt  remove_dups.h  remove_dups_test.cpp
CtCI/cpp/Ch 2. Linked Lists/2. Return Kth to last/: CMakeLists.txt  return_kth_to_last.h  return_kth_to_last_test.cpp
CtCI/cpp/Ch 2. Linked Lists/3. Delete Non-Head Node/: CMakeLists.txt  delete_middle_node.h  delete_middle_node_test.cpp
CtCI/cpp/Ch 2. Linked Lists/4. Paritition/: CMakeLists.txt  partition.h  partition_test.cpp
CtCI/cpp/Ch 2. Linked Lists/5. Sum Lists/: CMakeLists.txt  sum_lists.h  sum_lists_test.cpp
CtCI/cpp/Ch 2. Linked Lists/6. Palindrome/: CMakeLists.txt  palindrome.h  palindrome_test.cpp
CtCI/cpp/Ch 2. Linked Lists/7. Intersection/: CMakeLists.txt  intersection.h  intersection_test.cpp
CtCI/cpp/Ch 2. Linked Lists/8. Loop Detection/: CMakeLists.txt  loop_detection.h  loop_detection_test.cpp
CtCI/cpp/Ch 2. Linked Lists/common/: linked_lists.h  linked_lists_test.cpp
CtCI/cpp/Ch 2. Linked Lists/data_structures/: linked_lists_raw.h  linked_lists_shared.h  linked_lists_unique.h
CtCI/cpp/Ch 2. Linked Lists/data_structures/test/: linked_lists_raw_test.cpp  linked_lists_shared_test.cpp  linked_lists_unique_test.cpp
CtCI/cpp/Ch 2. Linked Lists/linked_list/: CMakeLists.txt  linked_lists_unique_test.cpp
CtCI/cpp/Ch 2. Linked Lists/linked_lists/: CMakeLists.txt  linked_lists_raw.h  linked_lists_shared.h  linked_lists_unique.h
CtCI/cpp/Ch 2. Linked Lists/linked_lists/test/: linked_lists_raw_test.cpp
CtCI/cpp/Ch 3. Stacks and Queues/: CMakeLists.txt
CtCI/cpp/Ch 3. Stacks and Queues/1. Three in One/: CMakeLists.txt
CtCI/cpp/Ch 3. Stacks and Queues/2. Stack Min/: CMakeLists.txt  stack_min.h  stack_min_test.cpp
CtCI/cpp/Ch 3. Stacks and Queues/3. Stack of Plates/: CMakeLists.txt  stack_of_plates.h  stack_of_plates_test.cpp
CtCI/cpp/Ch 3. Stacks and Queues/data_structures/: CMakeLists.txt  queue.h  stack.h
CtCI/cpp/Ch 3. Stacks and Queues/data_structures/test/: queue_test.cpp  stack_test.cpp
CtCI/cpp/Ch 4. Trees and Graphs/: CMakeLists.txt
CtCI/cpp/Ch 4. Trees and Graphs/1. Three in One/: fixed_multi_stack.h  fixed_multi_stack_test.cpp
CtCI/cpp/Ch 4. Trees and Graphs/1. isBalanced/: CMakeLists.txt  isBalanced.h  isBalanced_test.cpp
CtCI/cpp/Ch 4. Trees and Graphs/data_structures/: CMakeLists.txt  binary_tree.h  binary_tree_node.h  binary_tree_utilities.h
CtCI/cpp/Sanity GTest/: CMakeLists.txt  sanity_test.cpp
(+1 files in other folders)
