# Subdirectory for chapter 2 exercises
add_subdirectory("linked_lists")

add_subdirectory("1. Remove Dups")
add_subdirectory("2. Return Kth to last")
add_subdirectory("3. Delete Non-Head Node")
add_subdirectory("4. Paritition")
add_subdirectory("5. Sum Lists")
add_subdirectory("6. Palindrome")
add_subdirectory("7. Intersection")